fix overflowing dropdowns in game properties

--- a/css/settings/game.css
+++ b/css/settings/game.css
@@ -155,8 +155,10 @@
   margin-top: 0px !important;
 }
 
-[class*="appproperties_AppProperties_"][class*="appproperties_AppProperties_"]:not([class*="appproperties_GamepadUI_"]) .appproperties_FullWidth_FTUu7 .DialogDropDown, [class*="appproperties_AppProperties_"]:not([class*="appproperties_GamepadUI_"]) [class*="appproperties_AppProperties_"] .appproperties_FullWidth_FTUu7 .DialogDropDown {
-  height: 48px !important;
+[class*="appproperties_AppProperties_"][class*="appproperties_AppProperties_"]:not([class*="appproperties_GamepadUI_"]) [class*="appproperties_FullWidth_"] .DialogDropDown, [class*="appproperties_AppProperties_"]:not([class*="appproperties_GamepadUI_"]) [class*="appproperties_AppProperties_"] [class*="appproperties_FullWidth_"] .DialogDropDown {
+  min-height: 48px !important;
+  max-height: fit-content !important;
+  height: unset !important;
 }
 
 [class*="appproperties_AppProperties_"][class*="appproperties_AppProperties_"]:not([class*="appproperties_GamepadUI_"]) [class*="appproperties_DropDownLabel_"], [class*="appproperties_AppProperties_"]:not([class*="appproperties_GamepadUI_"]) [class*="appproperties_AppProperties_"] [class*="appproperties_DropDownLabel_"] {
