--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -658,6 +658,7 @@ div:not(:first-child) > .DialogSubHeader {
 
 [class*="gamepaddialog_Field_"][class*="gamepaddialog_ChildrenWidthFixed_"] [class*="gamepaddialog_FieldChildrenInner_"].DesktopUI, .DesktopUI [class*="gamepaddialog_Field_"][class*="gamepaddialog_ChildrenWidthFixed_"] [class*="gamepaddialog_FieldChildrenInner_"] {
   min-width: 300px !important;
+  max-width: 100% !important;
 }
 
 /* LIBRARY */
